@@ -36,7 +36,7 @@ public:
 		QVector<double> xRange{0., 0.}; // x range for integration
 	};
 	struct DataReductionResult {
-		DataReductionResult(){};
+		DataReductionResult(){}
 
 		bool available{false};
 		bool valid{false};
@@ -51,6 +51,7 @@ public:
 	~XYDataReductionCurve() override;
 
 	void recalculate() override;
+	bool resultAvailable() const override;
 	QIcon icon() const override;
 	void save(QXmlStreamWriter*) const override;
 	bool load(XmlStreamReader*, bool preview) override;
