@@ -33,7 +33,7 @@ public:
 		QVector<double> xRange{0., 0.}; // x range for integration
 	};
 	struct DifferentiationResult {
-		DifferentiationResult(){};
+		DifferentiationResult(){}
 
 		bool available{false};
 		bool valid{false};
@@ -45,6 +45,7 @@ public:
 	~XYDifferentiationCurve() override;
 
 	void recalculate() override;
+	bool resultAvailable() const override;
 	QIcon icon() const override;
 	void save(QXmlStreamWriter*) const override;
 	bool load(XmlStreamReader*, bool preview) override;
