@@ -36,7 +36,7 @@ public:
 		QVector<double> xRange{0, 0}; // x range for transform
 	};
 	struct TransformResult {
-		TransformResult(){};
+		TransformResult(){}
 
 		bool available{false};
 		bool valid{false};
@@ -48,6 +48,7 @@ public:
 	~XYFourierTransformCurve() override;
 
 	void recalculate() override;
+	bool resultAvailable() const override;
 	QIcon icon() const override;
 	void save(QXmlStreamWriter*) const override;
 	bool load(XmlStreamReader*, bool preview) override;
