@@ -32,7 +32,7 @@ public:
 		QVector<double> xRange{0, 0}; // x range for integration
 	};
 	struct IntegrationResult {
-		IntegrationResult(){};
+		IntegrationResult(){}
 
 		bool available{false};
 		bool valid{false};
@@ -45,6 +45,7 @@ public:
 	~XYIntegrationCurve() override;
 
 	void recalculate() override;
+	bool resultAvailable() const override;
 	QIcon icon() const override;
 	void save(QXmlStreamWriter*) const override;
 	bool load(XmlStreamReader*, bool preview) override;
