@@ -38,7 +38,7 @@ public:
 		QVector<double> xRange{0., 0.}; // x range for integration
 	};
 	struct SmoothResult {
-		SmoothResult(){};
+		SmoothResult(){}
 
 		bool available{false};
 		bool valid{false};
@@ -50,10 +50,12 @@ public:
 	~XYSmoothCurve() override;
 
 	void recalculate() override;
+	bool resultAvailable() const override;
 	QIcon icon() const override;
 	void save(QXmlStreamWriter*) const override;
 	bool load(XmlStreamReader*, bool preview) override;
 
+	const AbstractColumn* roughsColumn() const;
 	CLASS_D_ACCESSOR_DECL(SmoothData, smoothData, SmoothData)
 	const SmoothResult& smoothResult() const;
 
